...
            }}
            className="px-2"
          >
            <Pressable
              className="ml-14 w-full flex-row items-center justify-around gap-2 rounded-lg bg-primary p-2 px-2"
              onPress={() => void handleGoToRecording()}
              testID="asset-record-button"
            >
              <Icon as={MicIcon} size={24} className="text-secondary" />
              <View className="ml-1 flex-col items-start justify-start gap-0">
                <Text className="text-center text-base font-semibold text-secondary">
                  {t('startRecordingSession')}
                </Text>
...
